ui spacing issues

--- a/client/src/tailwind.css
+++ b/client/src/tailwind.css
@@ -114,7 +114,7 @@ input::placeholder {
   margin: 0 auto;
   width: 15%;
   height: 15%;
-  @apply bg-foreground;
+  background-color: white;
   border-radius: 100%;
   -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
   animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
